[package]
name = "mtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ben = { git = "https://github.com/rana/ben.git", version = "0.3.0" }
itr = { git = "https://github.com/rana/itr.git", version = "0.1.0" }


[build-dependencies]
prettyplease = "0.2.12"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = "2.0.29"
